# playground

./: .gitignore  .gitmodules  CHANGELOG.md  install_docker.sh  stock.css
.github/workflows/: changelog.yml
config/: starship.toml
config/hypr/: bindings.conf  hyprland.conf  monitors.conf
config/nvim/: lazy-lock.json  lazyvim.json
config/omarchy/: m_screen.txt  screensaver.txt  set_screensaver.bash
config/omarchy/themes/: nord
config/waybar/: config.jsonc  style.css  update_waybar.bash
lessons/: sorting.py
projects/: README.md
projects/claude/: README.md  changelog_generator.py
projects/claude/.claude/: settings.local.json
projects/finance/: .env  .gitignore  Dockerfile  README.md  docker-compose.db.yml  docker-compose.dev.yml  docker-compose.yml  finance.py  handler.py  init.sql  logger.py  main.py  requirements.txt  run.bash  run.sh  utils.py
projects/finance/mcontr_dev/: Dockerfile  index.html  package-lock.json  package.json
projects/finance/server/: main.py  requirements.txt  run.bash
projects/finance/sql/: init.sql  postgresql.conf
projects/finance/src/: handler.py  logger.py  parser.py
projects/finance/tests/: mock_amex.txt  test_parser.py
projects/finance/webapp/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
projects/firecrawl_scraper/: .gitignore  main.py  pyproject.toml  requirements.txt
projects/gemini/: .env  .gitignore  CHANGELOG_WORKFLOW.md  WARP.md  changelog.py  colored_logger.py  conversation_history.json  intro.py  markdown_formatter.py  pyproject.toml  requirements.txt  test_modules.py
projects/locals-only-warp/: .env.example  .gitignore  CLEANUP_SUMMARY.md  Dockerfile  Makefile  NOOB.md  README.md  app.py  docker-compose.yml  langchain.py  main.py  prompt.md  pyproject.toml  real_api_service.py  real_data_service.py  requirements-dev.txt  requirements-lock.txt  requirements.txt  start.sh  test_brightdata.py
projects/locals-only-warp/backend/: .gitignore  places.py  pyproject.toml  requirements.txt  run.sh
projects/locals-only-warp/backend/data/: app.duckdb
projects/locals-only-warp/backend/models/: __init__.py  base.py  geocoding.py  place.py  place_types.py  recommendation.py  requests.py  requests_new.py  responses.py  responses_new.py  user.py
projects/locals-only-warp/backend/src/: config.py  database.py  main.py  places_client.py  routes.py
projects/locals-only-warp/backend/utils/: db.py  logger.py  places.py  setup_location.sh
projects/locals-only-warp/static/: sw.js
projects/locals-only-warp/static/css/: app.css  style.css
projects/locals-only-warp/static/js/: app.js  dashboard.js  onboarding.js
projects/locals-only-warp/templates/: index.html
projects/locals-only-warp/templates/pages/: dashboard.html  landing.html  onboarding.html
projects/mcontr_dev/: .env  .env.example  index.html  package-lock.json  package.json  server.js
projects/node/: .gitignore
projects/ollama/: .env  README.md  agent.py  cli.py  example.py  setup.py
projects/scrapers/event_scraper/: events_output.json  main.py  pyproject.toml
projects/scrapers/search_engine/: README.md  main.py  mcp_client.py  mcp_gemini.py  mcp_search.py  pyproject.toml  test_mcp_tools.py
projects/scrapers/web_crawl/: .env.example  IMPROVE_CRAWL.md  README.md  README_REFACTOR.md  REFACTOR_SUMMARY.md  content_analyzer.py  crawl.py  diagnose.py  event_extractor.py  eventbrite.json  example_usage.py  main.py  output.json  pyproject.toml  results.json  sanjoseorg.json  simple_crawler.py  test_refactor.py  utils.py  web_crawler.py
scripts/: golden_calculator.py
(+453 files in other folders)
