[project]
name = "locals-only-warp"
version = "0.3.0"
description = "Local business recommendations app with Google Maps integration"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "flask>=2.3.3",
    "langchain>=0.0.27",
    "langchain-anthropic>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "gunicorn>=21.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.workspace]
members = [
    "backend",
]
