[project]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for Google Maps Places API integration"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn[standard]>=0.15.0",
    "pydantic>=1.8.0,<2.0.0",
    "httpx>=0.20.0",
    "python-dotenv>=0.19.0",
]
