[project]
name = "event-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "asyncio>=4.0.0",
    "beautifulsoup4>=4.13.5",
    "dotenv>=0.9.9",
    "geopy>=2.4.1",
    "google-generativeai>=0.8.5",
]
